<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensor1"
        android:id="@+id/Tag_1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/MAC_1"
        android:layout_alignBottom="@+id/Tag_1"
        android:layout_toEndOf="@+id/Tag_1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Status_1"
        android:text="@string/connecting"
        android:layout_below="@+id/Tag_1"
        android:layout_alignParentStart="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/swc_1"
        android:checked="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensor2"
        android:id="@+id/Tag_2"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:layout_below="@+id/Status_1"
        android:layout_toStartOf="@+id/MAC_1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/MAC_2"
        android:layout_alignBottom="@+id/Tag_2"
        android:layout_toEndOf="@+id/Tag_2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Status_2"
        android:text="@string/connecting"
        android:layout_below="@+id/Tag_2"
        android:layout_alignParentStart="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/swc_2"
        android:checked="false"
        android:layout_alignTop="@+id/MAC_2"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensor3"
        android:id="@+id/Tag_3"
        android:textStyle="bold"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/Status_2"
        android:layout_toStartOf="@+id/MAC_2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/MAC_3"
        android:layout_alignBottom="@+id/Tag_3"
        android:layout_toEndOf="@+id/Tag_3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Status_3"
        android:text="@string/connecting"
        android:layout_below="@+id/Tag_3"
        android:layout_alignParentStart="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/swc_3"
        android:checked="false"
        android:layout_alignTop="@+id/MAC_3"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensor4"
        android:id="@+id/Tag_4"
        android:textStyle="bold"
        android:layout_below="@+id/Status_3"
        android:layout_toStartOf="@+id/MAC_3"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/MAC_4"
        android:layout_alignBottom="@+id/Tag_4"
        android:layout_toEndOf="@+id/Tag_4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Status_4"
        android:text="@string/connecting"
        android:layout_below="@+id/Tag_4"
        android:layout_alignParentStart="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/swc_4"
        android:checked="false"
        android:layout_alignTop="@+id/MAC_4"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensor5"
        android:id="@+id/Tag_5"
        android:textStyle="bold"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/Status_4"
        android:layout_toStartOf="@+id/MAC_4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/MAC_5"
        android:layout_toEndOf="@+id/Tag_5"
        android:layout_alignBottom="@+id/Tag_5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Status_5"
        android:text="@string/connecting"
        android:layout_below="@+id/Tag_5"
        android:layout_alignParentStart="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/swc_5"
        android:checked="false"
        android:layout_alignTop="@+id/MAC_5"
        android:layout_alignParentEnd="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Status_5"
        android:layout_marginTop="23dp"
        android:orientation="horizontal"
        android:id="@+id/radioGroup"
        android:layout_alignLeft="@+id/btn_connect">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="12.5"
            android:id="@+id/Hz1"
            android:checked="true"
            android:layout_weight="1" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="25"
            android:id="@+id/Hz2"
            android:checked="false" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="6.25"
            android:id="@+id/Hz3"
            android:checked="false"
            android:layout_weight="1" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="3.125"
            android:id="@+id/Hz4"
            android:checked="false"
            android:layout_weight="1" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Freq(Hz)"
        android:id="@+id/label_Hz"
        android:textSize="16dp"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/radioGroup"
        android:layout_alignTop="@+id/radioGroup"
        android:gravity="center_vertical" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Subject"
        android:id="@+id/label_subject"
        android:textSize="16dp"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/lbl_subject"
        android:gravity="center_vertical" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lbl_subject"
        android:textSize="16dp"
        android:layout_below="@+id/radioGroup"
        android:layout_alignLeft="@+id/radioGroup"
        android:layout_toStartOf="@+id/btn_disconnect" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/swc_subject"
        android:checked="false"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/lbl_subject"
        android:layout_above="@+id/spinner_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Label"
        android:id="@+id/label_Label"
        android:textSize="16dp"
        android:gravity="center_vertical"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/spinner_label"
        android:layout_alignBottom="@+id/spinner_label" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/spinner_label"
        android:entries="@array/LabelNumber"
        android:layout_toEndOf="@+id/Tag_5"
        android:layout_below="@+id/lbl_subject"
        android:layout_alignLeft="@+id/lbl_subject"
        android:layout_alignRight="@+id/lbl_subject"
        android:spinnerMode="dropdown" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/swc_label"
        android:checked="false"
        android:layout_alignBottom="@+id/spinner_label"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/lbl_subject" />

    <Button
        android:id="@+id/btn_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Connect"
        android:onClick="buttonClicked"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/MAC_5" />

    <Button
        android:id="@+id/btn_disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Disconnect"
        android:onClick="buttonClicked"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/swc_5" />

</RelativeLayout>
